--- a/Sales & Product Analytics.ipynb
+++ b/Sales & Product Analytics.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 178,
    "id": "777935eb-7caa-454a-85cd-55b84c93b1fd",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
     "import os"
    ]
   },
@@ -2215,24 +2216,6 @@
     "plt.tight_layout()\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
-   "id": "9f77cf21-2800-4f07-a828-680d3271bec4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "all_data.to_csv('cleaned_all_data.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0afef0a9-e47b-4389-8f9f-7cb0e777d2b4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
